--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,34 @@
-version: "3.1"
+version: '3.0'
+
 services:
-  db:
-    #container_mname: postgres
-    image: postgres:15.2-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=${TYPEORM_USERNAME}
-      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
-      - POSTGRES_DB=${TYPEORM_DATABASE}
+  main:
+    container_name: main
+    build:
+      context: .
+    env_file:
+      - .development.env
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - .:/app
+      - /app/node_modules
     ports:
-      - ${TYPEORM_PORT}:${TYPEORM_PORT}
+      - 5000:5000
+      - 9229:9229
+    command: npm run start:dev
+    depends_on:
+      - postgres
+    restart: always
+  postgres:
+    container_name: postgres
+    image: postgres:15.2-alpine
+    env_file:
+      - .env
+    environment:
+      PG_DATA: /var/lib/postgresql/data
+    ports:
+      - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    restart: always
+
+volumes:
+  pgdata:
