--- a/front-portal/package.json
+++ b/front-portal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-poral",
+  "name": "front-portal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
+    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "sass": "^1.62.0",
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
